--- a/lab8/frontend/package.json
+++ b/lab8/frontend/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "-": "^0.0.1",
+    "@mlc-ai/web-llm": "^0.2.80",
     "@reduxjs/toolkit": "^2.10.1",
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
